--- a/styles/style.css
+++ b/styles/style.css
@@ -48,8 +48,13 @@ html {
 }
 
 body {
+  width: 100%;
   font-family: "Fira Sans Condensed", sans-serif;
   background-color: var(--clr-white);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 /* global css */
@@ -65,4 +70,33 @@ a {
 
 li {
   list-style: none;
+}
+
+.canvas {
+  width: 100%;
+  height: 86vh;
+  border: 6px solid #222;
+}
+
+.toolbox {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  border: 6px solid #222;
+  /* margin-top: 1rem; */
+}
+
+/* button */
+.btn {
+  font-size: 2rem;
+  font-weight: 800;
+  padding: 0.5rem 1rem;
+  border-radius: 50%;
+}
+
+/* size */
+.size {
+  font-size: 3rem;
+  font-weight: 600;
 }
