--- a/styles/style.css
+++ b/styles/style.css
@@ -86,6 +86,23 @@ li {
   border: 6px solid #222;
   /* margin-top: 1rem; */
 }
+.toolbox > * {
+  background-color: #fff;
+  border: none;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 2rem;
+  height: 50px;
+  width: 50px;
+  margin: 0.25rem;
+  padding: 0.25rem;
+  cursor: pointer;
+}
+
+.toolbox > *:last-child {
+  margin-top: auto;
+}
 
 /* button */
 .btn {
@@ -93,10 +110,15 @@ li {
   font-weight: 800;
   padding: 0.5rem 1rem;
   border-radius: 50%;
+  cursor: pointer;
 }
 
 /* size */
 .size {
   font-size: 3rem;
   font-weight: 600;
+}
+
+/* input */
+.input {
 }
